# rep_for_mlops

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dvc.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
config/: infering.yaml  training.yaml
data/: samsung_test.txt.dvc  samsung_test_labels.txt.dvc  samsung_train.txt.dvc  samsung_train_labels.txt.dvc
outputs/2024-02-14/01-48-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/01-49-41/.hydra/: hydra.yaml
outputs/2024-02-14/01-58-25/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/02-00-57/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/02-08-56/.hydra/: hydra.yaml
outputs/2024-02-14/20-37-04/.hydra/: hydra.yaml
outputs/2024-02-14/20-37-16/.hydra/: hydra.yaml
outputs/2024-02-14/20-48-32/.hydra/: hydra.yaml
outputs/2024-02-14/20-48-46/.hydra/: hydra.yaml
outputs/2024-02-14/20-50-27/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/20-50-38/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/20-55-13/.hydra/: hydra.yaml
outputs/2024-02-14/20-55-35/.hydra/: hydra.yaml
outputs/2024-02-14/21-02-00/.hydra/: hydra.yaml
outputs/2024-02-14/21-02-11/.hydra/: hydra.yaml
outputs/2024-02-14/21-07-27/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/21-07-35/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-14/21-09-12/.hydra/: hydra.yaml
outputs/2024-02-14/21-09-23/.hydra/: hydra.yaml
outputs/2024-02-14/21-11-58/.hydra/: hydra.yaml
outputs/2024-02-14/21-12-06/.hydra/: hydra.yaml
outputs/2024-02-14/21-19-50/.hydra/: hydra.yaml
(+15 files in other folders)
