[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Ekaterina Krylova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.20.3"
seaborn = "^0.13.1"
pandas = "1.2.4"
scikit-learn = "^1.3.2"
matplotlib = "3.7.4"
hydra = "^1.3.2"
joblib = "^1.3.2"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
